local ignores to try and not be a pain to upstream

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,7 @@ app.*.map.json
 #
 .vscode
 .gitignore
+#  Leave this for upstream to manage
+#pubspec.yaml
+#  Leave this for upstream to manage
+pubspec.lock
